test/FAIL/dispcmd/to_many_arguments/03_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

load boucle.o
disp mem map 0x100
